tests/snapshots/preprocessor__html_blocks_left_alone.snap
---
source: tests/preprocessor.rs
expression: out
---
# Marker Syntax

A marker looks like this:

<pre>
r[section.rule-name]
The requirement text follows on the next line.
</pre>

The `<pre>` block above documents the syntax — its content must not be
replaced.

<!--
r[commented.out]
Draft requirements sometimes live in comments.
-->

But a real marker outside any HTML block does get an anchor:

<div class="tracey-req" id="r-real.marker"><a class="tracey-req-anchor" href="#r-real.marker">real.marker</a></div>

This one is live.
