tests/snapshots/preprocessor__inline_mentions_survive.snap
---
source: tests/preprocessor.rs
expression: out
---
# Security

<div class="tracey-req" id="r-sec.drv.validate"><a class="tracey-req-anchor" href="#r-sec.drv.validate">sec.drv.validate</a></div>

Derivations are validated before scheduling.

Additional validation checks (below) are enforced at other points.
These are **not** covered by `r[sec.drv.validate]` itself.

| Check | Component | Requirement |
|-------|-----------|-------------|
| NAR SHA-256 | Store | `r[sec.drv.validate]` |

When implementing r[sec.drv.validate] you should also consider the
threat model described above.
